--- a/nginx.conf
+++ b/nginx.conf
@@ -1,9 +1,42 @@
 server {
+    listen 443 ssl;
+    server_name *.leither.uk;
+
+    ssl_certificate /etc/nginx/ssl/leither.uk.orig.pem;
+    ssl_certificate_key /etc/nginx/ssl/leither.uk.cert.pem;
+
+    # Configuration for secretari
+    location /secretari {
+        proxy_pass http://localhost:8505;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_redirect off;
+    }
+
+    location /aichat {
+        proxy_pass http://localhost:8507;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_redirect off;
+    }
+}
+
+server {
     listen 80;
     listen [::]:80;
     server_name *.fireshare.xyz; #Example: demo.flowiseai.com
     location / {
-        proxy_pass http://localhost:8080;
+        proxy_pass http://localhost:8081;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -20,53 +53,10 @@ server {
     listen [::]:80;
     server_name *.leid.online;     #Example: demo.flowiseai.com
     location / {
-        proxy_pass http://localhost:8080;
+        proxy_pass http://localhost:8081;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_redirect off;
-    }
-}
-
-server {
-    listen 443 ssl;
-    server_name *.leither.uk;
-
-    ssl_certificate /etc/nginx/ssl/leither.uk.orig.pem;
-    ssl_certificate_key /etc/nginx/ssl/leither.uk.cert.pem;
-
-    # Configuration for secretari
-    location /secretari/ {
-        proxy_pass http://localhost:8505;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_redirect off;
-    }
-
-    location /secretari/ws/ {
-        proxy_pass http://localhost:8505;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_redirect off;
-    }
-
-    location /secretari/token {
-        proxy_pass http://localhost:8505;
-        proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
