--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ runs/fashion_mnist_experiment_1/Training vs. Validation Loss_Training/events.out
 runs/fashion_mnist_experiment_1/events.out.tfevents.1697731115.Mac-mini.local.70796.0
 img/cat.jpg
 .env
+/package
